$Id: History,v 1.100 2000-03-21 09:07:54 gcosmo Exp $
$Name: not supported by cvs2svn $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------

History file for Geant4 configuration scripts.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

21st March 2000  Gabriele Cosmo
- makeshlib.sh: corrected invokation of compiler for HP-aCC setup.
  Changed CC to aCC (fixes bug-report #68).

13th March 2000  Gabriele Cosmo (config-V01-01-00)
- architecture.gmk: corrected FCLIBS for Linux-g++
  o added -lg2c -lnsl and removed -lf2c.

14th February 2000  Gabriele Cosmo (config-V01-00-02)
- architecture.gmk: added option '+W823' to HP-aCC compilation setup to
  discard warnings for macros parameter definition as used in the new
  NIST STEP reader.
- binmake.gmk: moved $EXTRALIBS to be included on top of the linking list,
  just after the user application library.

31st January 2000  Gabriele Cosmo (config-V01-00-01)
- Added control for the Ray-tracer driver. Introduced G4VIS_USE_RAYTRACER
  in G4VIS_USE.gmk and G4VIS_BUILD_RAYTRACER_DRIVER in G4VIS_BUILD.gmk (M.Asai).
- binmake.gmk: fixed dependency order for compound libraries.
  Moved -lG4particles and -lG4materials downstream in the list.
- architecture.gmk: added G4NO_OPTIMISE for allowing compilation without
  any level of optimisation or debug. G4DEBUG if defined takes precedence.
  G4DEBUG and G4OPTIMISE are now defined also as CPPFLAGS.

3rd January 2000  Gabriele Cosmo (config-V01-00-00)